Get prisma working in docker

--- a/server/.env
+++ b/server/.env
@@ -11,4 +11,4 @@
 POSTGRES_USER=prisma
 POSTGRES_PASSWORD=prisma
 POSTGRES_DB=paladindeck
-DATABASE_URL="postgresql://prisma:prisma@localhost:5432/paladindeck?paladindeck=public&sslmode=prefer"
+DATABASE_URL="postgresql://prisma:prisma@postgres:5432/paladindeck?paladindeck=public&sslmode=prefer"
