Stream and process data

--- a/server/.env
+++ b/server/.env
@@ -8,7 +8,24 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# DATABASE
+
 POSTGRES_USER=prisma
 POSTGRES_PASSWORD=prisma
 POSTGRES_DB=paladindeck
 DATABASE_URL="postgresql://prisma:prisma@postgres:5432/paladindeck?paladindeck=public&sslmode=prefer"
+
+# SCRYFALL API
+
+SCRYFALL_API_URI=https://api.scryfall.com
+
+# REDIS
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=password
+
+# Downloads
+
+DOWNLOADS_DIR=/tmp/downloads
+BULK_DATA_FILE_NAME=bulk_data
