--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -15,12 +15,27 @@ services:
       - '9229:9229'
     depends_on:
       - postgres
+      - redis
     networks:
       - nestjs-network
     volumes:
       - .:/usr/src/app
+      - .downloads:/tmp/downloads
+      - .data:/tmp/data
       - /usr/src/app/node_modules
     restart: unless-stopped
+
+  redis:
+    image: redis:6.2-alpine
+    container_name: redis
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass password
+    networks:
+      - nestjs-network
+    volumes:
+      - redis:/data
 
   postgres:
     image: postgres:14.1-alpine
@@ -47,3 +62,5 @@ networks:
 
 volumes:
   postgres:
+  redis:
+    driver: local
