--- a/server/package.json
+++ b/server/package.json
@@ -21,21 +21,33 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.5",
+    "@nestjs/bull": "^0.5.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.5",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.10.0",
+    "apollo-server-express": "^3.6.3",
+    "axios": "^0.26.0",
+    "bull": "^4.6.2",
+    "graphql": "^16.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "stream-chain": "^2.2.5",
+    "stream-json": "^1.7.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bull": "^3.15.8",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
+    "@types/stream-json": "^1.7.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
