--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  server:
+  paladindeck_server:
     container_name: paladindeck-server
     image: paladindeck-server
     build:
