--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:generate": "prisma generate",
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
@@ -43,6 +44,7 @@
     "passport": "^0.5.2",
     "passport-firebase-jwt": "^1.2.1",
     "passport-jwt": "^4.0.0",
+    "prisma": "^3.10.0",
     "prisma-graphql-type-decimal": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -70,7 +72,6 @@
     "jest": "^27.2.5",
     "lint-staged": "^12.3.4",
     "prettier": "^2.3.2",
-    "prisma": "^3.10.0",
     "prisma-nestjs-graphql": "^14.6.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
