--- a/heroku.yml
+++ b/heroku.yml
@@ -2,6 +2,7 @@ setup:
   addons:
     - plan: heroku-postgresql:hobby-dev
     - plan: heroku-redis:hobby-dev
+    - plan: buketeer:hobbyist
 build:
   docker:
     web: ./server/Dockerfile
