--- a/heroku.yml
+++ b/heroku.yml
@@ -1,7 +1,7 @@
 setup:
   addons:
     - plan: heroku-postgresql:hobby-dev
-    - plan: heroku-redis:hobby-dev
+    - plan: heroku-redis:premium-1
     - plan: buketeer:hobbyist
 build:
   docker:
