--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "firebase-admin": "^10.0.2",
     "graphql": "^16.3.0",
     "graphql-type-json": "^0.3.2",
+    "ioredis": "^4.28.5",
     "lodash": "^4.17.21",
     "passport": "^0.5.2",
     "passport-firebase-jwt": "^1.2.1",
