--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen -r dotenv/config"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -25,6 +26,12 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/fragment-matcher": "^3.2.1",
+    "@graphql-codegen/typed-document-node": "^2.2.5",
+    "@graphql-codegen/typescript": "^2.4.5",
+    "@graphql-codegen/typescript-operations": "^2.3.2",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.8",
     "@types/lodash": "^4.14.179",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
@@ -32,6 +39,7 @@
     "@typescript-eslint/parser": "^5.14.0",
     "autoprefixer": "^10.4.2",
     "babel-plugin-macros": "^3.1.0",
+    "dotenv": "^16.0.0",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.4.0",
