--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
+    "@sentry/nextjs": "^6.18.2",
     "ag-grid-community": "^27.0.1",
     "ag-grid-enterprise": "^27.0.1",
     "ag-grid-react": "^27.0.1",
