--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,8 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.10.0",
+    "@sentry/node": "^6.18.2",
+    "@sentry/types": "^6.18.2",
     "apollo-server-express": "^3.6.3",
     "aws-sdk": "^2.1087.0",
     "axios": "^0.26.0",
