--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.53.1",
     "@nestjs/apollo": "^10.0.5",
+    "@nestjs/axios": "^0.0.7",
     "@nestjs/bull": "^0.5.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.2.0",
