--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "@nestjs/graphql": "^10.0.5",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.0.2",
     "@ntegral/nestjs-sentry": "^3.0.7",
     "@prisma/client": "^3.10.0",
     "@sentry/node": "^6.18.2",
@@ -65,6 +66,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bull": "^3.15.8",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/lodash": "^4.14.179",
