--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-firebaseui": "^6.0.0",
-    "react-select": "^5.2.2"
+    "react-select": "^5.2.2",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
